# sagan_proposal_generator

./: .gitignore  README.md  config.py  pyproject.toml  test_config.py  user_prompts.txt
ingest_data/: ingest_data.py  ingest_multimodal_data.py  pyproject.toml  test_multimodal_vectordb.py
ingest_data/astroai2/7e446752-8cb0-43c3-93b3-2d306b025079/: index_metadata.pickle
ingest_data/astroai3/52cb6b67-bd99-47f7-8865-01094b279af6/: index_metadata.pickle
ingest_data/astroaidb/15444c6f-80b8-47bf-a2eb-ef1cafcc5bcf/: index_metadata.pickle
ingest_data/astroaidb2/: chroma.sqlite3
ingest_data/fnr_template_db/: chroma.sqlite3
ingest_data/mychroma_db/3f1b973c-85c0-4f25-9ba7-1029cbf08116/: index_metadata.pickle
ingest_data/query_results/: results_20241124_184316.html  results_20241124_184449.html  results_20241124_184604.html  results_20241124_185015.html  results_20241124_194037.html  results_20241124_194258.html  results_20241124_194759.html  results_20241124_195142.html  results_20241124_195307.html  results_20241124_195919.html  results_20241124_201104.html  results_20241124_201153.html
sagan_workflow/: pyproject.toml  setup.py
sagan_workflow/spaider_agent_temp/: app.py  config.py  graph.py  main.py  raw_content.txt  run_server.py  schemas.py  test.py  test_config.py  test_generated_sections.py
sagan_workflow/spaider_agent_temp/certs/: cacert.pem
sagan_workflow/spaider_agent_temp/models/: chatgroq.py
sagan_workflow/spaider_agent_temp/nodes_and_conditional_edges/: aditogpt.py  conditional_edges.py  formatting_node_test.py  generation_node_test.py  node_utils.py  nodes.py
sagan_workflow/spaider_agent_temp/output_pdf/: generated_section_test.aux  generated_section_test.out  generated_section_test.tex  generated_section_test.toc  generated_sections.txt  output.blg  output.md  output.tex
sagan_workflow/spaider_agent_temp/prompts/: prompts.py
sagan_workflow/spaider_agent_temp/tools/: check_db.py  file_tree.py  multimodal_query.py  query_chromadb.py  query_results.json  test_multimodal_query.py  web_tool.py
sagan_workflow/spaider_agent_temp/utils/: content_processing.py  latex_to_markdown.py  latex_utils.py  latextopdf.py
sagan_workflow_refiner/: app.js  logs.txt  package-lock.json  package.json  pyproject.toml  user_prompts.txt
sagan_workflow_refiner/input_draft/: draft.md
sagan_workflow_refiner/spaider_agent_temp/: app.py  formatter_response.txt  graph.py  main.py  schemas.py
(+33 files in other folders)
