[tool.poetry]
name = "ingest-data"
version = "0.1.0"
description = ""
authors = ["Ketan Kunkalikar <ketankunkalikar33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain-community = "^0.3.3"
langchain-huggingface = "^0.1.0"
langchain = "^0.3.4"
langgraph = "^0.2.39"
langchain-core = "^0.3.12"
chardet = "^5.2.0"
unstructured = "^0.16.2"
pymupdf = "^1.24.12"
pypdf = "^5.0.1"
chromadb = "^0.5.15"
pdfminer = "^20191125"
docx2txt = "^0.8"
fitz = "^0.0.1.dev2"
einops = "^0.8.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
