[tool.poetry]
name = "spaider-agent-template"
version = "0.1.0"
description = ""
authors = ["Ketan Kunkalikar <ketankunkalikar33@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langchain = "*"
langchain-huggingface = "*"
langchain-community = "*"
typing-extensions = "*"
langgraph = "*"
python-dotenv = "*"
openai = "*"
langchain-openai = "*"
langgraph-checkpoint-sqlite = "*"
black = "*"
ipython = "*"
langchain-groq = "*"
chromadb = "^0.5.15"
langchain-chroma = "^0.1.4"
markdown = "^3.7"
pdfkit = "^1.0.0"
fastapi = "^0.115.5"
colorama = "^0.4.6"
websockets = "^14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
